[project]
name = "hyakvnc"
version = "2.0"
description = "Create and manage VNC sessions on HYAK Klone."
authors = [
    {name = "Hansem Ro", email = "hansem7@uw.edu"},
    {name = "Altan Orhon", email = "altan@uw.edu"},
]
dependencies = []
requires-python = ">=3.9"
license = {text = "MIT"}
readme = "README.md"

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
hyakvnc = "hyakvnc:main"

[project.urls]
homepage = ""
